third_party/move/move-compiler-v2/tests/checking/typing/uninferred_type_pack.exp

Diagnostics:
error: unable to infer type: `M::S<?1>`
  ┌─ tests/checking/typing/uninferred_type_pack.move:5:9
  │
5 │         S{};
  │         ^^^
